# syswatch-tui

./: .gitignore  Cargo.toml  README.md
src/: main.rs  test_sysinfo.rs
src/metrics/: android.rs  collector.rs  linux.rs  mod.rs  network.rs
src/ui/: cpu.rs  memory.rs  mod.rs  network.rs  processes.rs  sysinfo.rs
